--- a/stylemywork.css
+++ b/stylemywork.css
@@ -28,3 +28,12 @@ a{
     font-size: 20px;
 
 }
+
+.nav-links{
+
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+    letter-spacing: 3px;
+    font-size: 14px;
+}
