--- a/stylemysocials.css
+++ b/stylemysocials.css
@@ -100,7 +100,7 @@ h1{
    
     h1{
         align-items: center;
-        font-size: 20px;
+        font-size: 18px;
         
         
     }
@@ -119,6 +119,11 @@ h1{
     .logo{
 
         font-size: 10px;
+    }
+
+    .links a{
+
+        margin: 1em;
     }
     
    
