--- a/stylehireme.css
+++ b/stylehireme.css
@@ -26,6 +26,24 @@ a{
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
+    transition: 0.2s all ease-in-out;
+
+
+}
+
+.logo:hover, .nav-links li:hover{
+
+    transform: scale(1.1);
+    
+
+}
+
+.nav-links a:hover{
+    color: #fcde67;
+}
+
+.nav-links li{
+    transition: 0.2s all ease-in-out;
 
 }
 
@@ -78,4 +96,12 @@ h1{
         font-size: 10px;
     }
 
+}
+
+
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+h1{
+
+    animation: fadeIn 2s ease;
 }
